deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onboarding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onboarding
  template:
    metadata:
      labels:
        app: onboarding
    spec:
      containers:
        - name: onboarding
          image: inseefrlab/k8s-onboarding:alpha
          resources:
            limits:
              cpu: "1"
              memory: 4Gi
            requests:
              cpu: "0.5"
              memory: 1Gi
