deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onboarding
  labels:
    name: onboarding
spec:
  rules:
    - host: onboarding.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: onboarding
                port:
                  name: http
